--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,14 +1,15 @@
 .card {
-  height: 175px;
+  display: block;
   text-shadow: 0 1px 3px rgba(0,0,0,0.6);
-  background-size: cover !important;
-  color: white;
+  background: white;
+  margin-bottom: 30px;
   position: relative;
 }
-.card-user {
-  position: absolute;
-  right: 10px;
-  top: 10px;
+
+.card-header {
+  border-radius: 5px;
+  height: 175px;
+  background-size: cover !important;
 }
 .card-category {
   position: absolute;
@@ -16,18 +17,14 @@
   left: 10px;
   font-size: 10px;
   text-transform: uppercase;
+  color: white;
 }
 .card-description {
   position: absolute;
   bottom: 10px;
   left: 10px;
+  color: white;
 }
-.card-description h2 {
-  font-size: 24px;
-}
-.card-description p {
-  font-size: 13px;
-  }
 .card-link {
   position: absolute;
   top: 0;
