--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -10,3 +10,34 @@
 </div>
 
 
+
+<div class="tile is-ancestor">
+  <div class="tile is-vertical is-8">
+    <div class="tile">
+      <div class="tile is-parent is-vertical">
+        <article class="tile is-child">
+        <h1><%= @place.name %></h1>        </article>
+        <article class="tile is-child">
+        <%= @place.description %>
+        </article>
+      </div>
+      <div class="tile is-parent">
+        <article class="tile is-child">
+        <%= @place.address%>
+
+        </article>
+      </div>
+    </div>
+    <div class="tile is-parent">
+      <article class="tile is-child">
+      <%= @place.price%>
+
+      </article>
+    </div>
+  </div>
+  <div class="tile is-parent">
+    <article class="tile is-child">
+      <!-- Any content you want here -->
+    </article>
+  </div>
+</div>
