--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -39,6 +39,7 @@
     <% else %>
     <!-- Button (call-to-action) -->
       <%= link_to t(".top_call_to_action", default: "Log in"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
+      <%= link_to t(".top_call_to_action", default: "Sign up"), new_user_registration_path, class: "navbar-wagon-item navbar-wagon-button btn" %>
     <% end %>
   </div>
 
