--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -3,5 +3,7 @@
  <%= f.input :description %>
  <%= f.input :address %>
  <%= f.input :price %>
+  <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
  <%= f.submit %>
 <% end %>
