Add photos to seed and to index

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -6,7 +6,7 @@
           <div class="card text-center">
 
 
-            <div class="card-header" style="background-image: url('https://unsplash.it/g/400x300')">
+            <div class="card-header" style="background-image: url('<%= cl_image_path place.photo, height: 300, width: 400, crop: :fill %>')">
             </div>
 
 
