--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,14 +4,26 @@
       <div><h2>User Name</h2>
         <%= @user.email %>
       </div>
-      <div><h3>Reservation List</h3>
-      </div>
-      <div> <h3>INBOX</h3></div>
       <div>
         <h3>My Places</h3>
         <% @places.each do |place| %>
         <%= place.name %>
         <% end %>
+      </div>
+      <div>
+        <h3>Reservations for my places</h3>
+        <ul>
+          <% @reservations_for_me.each do |res| %>
+           <li>
+              <%= res.user.email %> requested <%= res.place.name %>.
+              <% if res.status == "pending" %>
+                <%= link_to "Accept", reservation_accept_path(res.id), method: :patch %> | <%= link_to "Decline", reservation_decline_path(res.id), method: :patch %>
+              <% else %>
+                <%= res.status %>
+              <% end %>
+           </li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </div>
