--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,38 +1,3 @@
-<!-- <div class="_bulma-grid">
-  <div class="container">
-    <div class="tile is-ancestor">
-      <div class="tile is-vertical is-8">
-        <div class="tile">
-          <div class="tile is-parent is-vertical">
-            <article class="tile is-child">
-              <h1><%= @place.name %></h1>
-            </article>
-            <article class="tile is-child">
-              <%= @place.description %>
-            </article>
-          </div>
-          <div class="tile is-parent">
-            <article class="tile is-child">
-             <%= @place.price%>
-            </article>
-          </div>
-        </div>
-        <div class="tile is-parent">
-          <article class="tile is-child">
-           <%= @place.address %>
-          </article>
-        </div>
-      </div>
-      <div class="tile is-parent">
-        <%= link_to "Reserve", place_reservations_path(@place), method: :post, class: "button is-primary is-large" %>
-      </div>
-    </div>
-  </div>
-   <div>
-        <%= link_to "Back to homepage", places_path, method: :post, class: "button is-primary" %>
-    </div>
-  </div>
- -->
  <div class="container">
   <div class="row">
     <div class="col-xs-4 col-xs-offset-4 col-sm-4 col-sm-offset-0 col-lg-4 col-lg-offset-0">
@@ -52,6 +17,10 @@
         <div class="media-section">
          <h2>Price </h2>
          <%= @place.price %>
+       </div>
+        <div class="media-section">
+         <h2>User</h2>
+         <%= link_to @place.user.email, user_path(@place.user) %>
        </div>
        <div class="media-section">
         <%= link_to "Reserve", place_reservations_path(@place), method: :post, class: "btn-treehouse"
