Finish user dashboard

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,31 +10,33 @@
         <%= place.name %>
         <% end %>
       </div>
-      <div>
-        <h3>Reservations for my places</h3>
-        <ul>
-          <% @reservations_for_me.each do |res| %>
-           <li>
-              <%= res.user.email %> requested <%= res.place.name %>.
-              <% if res.status == "pending" %>
-                <%= link_to "Accept", reservation_accept_path(res.id), method: :patch %> | <%= link_to "Decline", reservation_decline_path(res.id), method: :patch %>
-              <% else %>
-                <%= res.status %>
-              <% end %>
-           </li>
-          <% end %>
-        </ul>
-      </div>
-      <div>
-        <h3>Reservations I made</h3>
-        <ul>
-          <% @reservations_i_made.each do |res| %>
-            <li>
-              <%= res.place.name %>. <%= res.status %>
-            </li>
-          <% end %>
-        </ul>
-      </div>
+      <% if current_user == @user %>
+        <div>
+          <h3>Reservations for my places</h3>
+          <ul>
+            <% @reservations_for_me.each do |res| %>
+             <li>
+                <%= res.user.email %> requested <%= res.place.name %>.
+                <% if res.status == "pending" %>
+                  <%= link_to "Accept", reservation_accept_path(res.id), method: :patch %> | <%= link_to "Decline", reservation_decline_path(res.id), method: :patch %>
+                <% else %>
+                  <%= res.status %>
+                <% end %>
+             </li>
+            <% end %>
+          </ul>
+        </div>
+        <div>
+          <h3>Reservations I made</h3>
+          <ul>
+            <% @reservations_i_made.each do |res| %>
+              <li>
+                <%= res.place.name %>. <%= res.status %>
+              </li>
+            <% end %>
+          </ul>
+        </div>
+      <% end %>
     </div>
   </div>
 </div>
