update view for place#show"

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -3,4 +3,6 @@
 @import "badges";
 @import "card";
 @import "media";
-@import "button"
+@import "button";
+@import "place-photo-wrapper";
+@import "space-map"
