--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -1,3 +1,6 @@
+<div class="container">
+<div class="row">
+<div class="col-sm-offset-4 col-sm-4">
 <%= simple_form_for(@place) do |f| %>
  <%= f.input :name %>
  <%= f.input :description %>
@@ -7,3 +10,7 @@
   <%= f.input :photo_cache, as: :hidden %>
  <%= f.submit %>
 <% end %>
+</div>
+</div>
+</div>
+
