--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,42 +1,80 @@
 <div class="container">
   <div class="row">
-    <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-      <div><h2>User Name</h2>
-        <%= @user.email %>
-      </div>
+  <% user_avatar_url = current_user.facebook_picture_url || "http://placehold.it/30x30" %>
+
+    <h2><%= image_tag user_avatar_url, crop: :fill, class: "avatar" %> <%= @user.username %></h2>
+    <div class="col-xs-12 col-sm-6">
       <div>
-        <h3>My Places</h3>
+        <h3>Places</h3>
         <% @places.each do |place| %>
-        <%= place.name %>
+        <div class="card text-center">
+
+
+          <div class="card-header" style="background-image: url('<%= cl_image_path place.photo, height: 300, width: 400, crop: :fill %>')">
+          </div>
+
+
+          <div class="card-description">
+            <h3><%= place.name %></h3>
+          </div>
+          <%= link_to "", place_path(place), class: "card-link" %>
+        </div>
         <% end %>
       </div>
-      <% if current_user == @user %>
-        <div>
-          <h3>Reservations for my places</h3>
-          <ul>
-            <% @reservations_for_me.each do |res| %>
-             <li>
-                <%= res.user.email %> requested <%= res.place.name %>.
-                <% if res.status == "pending" %>
-                  <%= link_to "Accept", reservation_accept_path(res.id), method: :patch %> | <%= link_to "Decline", reservation_decline_path(res.id), method: :patch %>
-                <% else %>
-                  <%= res.status %>
-                <% end %>
-             </li>
-            <% end %>
-          </ul>
-        </div>
-        <div>
-          <h3>Reservations I made</h3>
-          <ul>
-            <% @reservations_i_made.each do |res| %>
-              <li>
-                <%= res.place.name %>. <%= res.status %>
-              </li>
-            <% end %>
-          </ul>
-        </div>
-      <% end %>
     </div>
+    <div class="col-xs-12 col-sm-6">
+      <% if current_user == @user %>
+      <ul class="nav nav-tabs" role="tablist">
+      <li role="presentation" class="active"><a href="#guests" data-toggle="tab">My guests</a>
+        </li>
+        <li role="presentation"><a href="#bookings"  data-toggle="tab">My bookings</a>
+        </li>
+      </ul>
+      <div class="tab-content">
+        <div role="tabpanel" class="tab-pane active" id="guests">
+          <table class="table">
+            <tr>
+              <th>Guest</th>
+              <th>Place</th>
+              <th>Status</th>
+            </tr>
+            <% @reservations_for_me.each do |res| %>
+            <tr>
+              <td>
+                <%= res.user.username %>
+              </td>
+              <td>
+               <%= res.place.name %>
+             </td>
+             <td>
+              <% if res.status == "pending" %>
+              <%= link_to "Accept", reservation_accept_path(res.id), method: :patch, class: "btn btn-success btn-xs" %> <%= link_to "Decline", reservation_decline_path(res.id), method: :patch, class: "btn btn-danger btn-xs" %>
+              <% elsif res.status == "accepted" %>
+              <span class="label label-success"><i class="fa fa-check"></i></span> Accepted
+              <% elsif res.status == "declined" %>
+              <span class="label label-danger"><i class="fa fa-times"></i></span> Declined
+              <% end %>
+            </td>
+          </tr>
+          <% end %>
+        </table>
+      </div>
+      <div role="tabpanel" class="tab-pane" id="bookings">
+        <h3>My bookings</h3>
+        <ul>
+          <% @reservations_i_made.each do |res| %>
+          <li>
+            <%= res.place.name %>. <%= res.status %>
+          </li>
+          <% end %>
+        </ul>
+      </div>
+    </div>
+
+
+
+
+    <% end %>
   </div>
+</div>
 </div>
