--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -41,10 +41,10 @@
             <% @reservations_for_me.each do |res| %>
             <tr>
               <td>
-                <%= res.user.username %>
+                <%= link_to res.user.username, user_path(res.user) %>
               </td>
               <td>
-               <%= res.place.name %>
+               <%= link_to res.place.name, place_path(res.place) %>
              </td>
              <td>
               <% if res.status == "pending" %>
@@ -69,10 +69,10 @@
           <% @reservations_i_made.each do |res| %>
           <tr>
             <td>
-              <%= res.place.name %>
+              <%= link_to res.place.name, place_path(res.place) %>
             </td>
             <td>
-              <%= res.place.user.username %>
+              <%= link_to res.user.username, user_path(res.user) %>
             </td>
             <td>
               <% if res.status == "accepted" %>
