--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -30,7 +30,7 @@
        </div>
        <div class="media-section">
          <h2>User</h2>
-         <%= link_to @place.user.email, user_path(@place.user) %>
+         <%= link_to @place.user.first_name, user_path(@place.user) %>
        </div>
      </div>
    </div>
