--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -27,7 +27,7 @@
       <% end %>
     </div>
   </div>
-  <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success" %>
+  <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
 </div>
 
 
