--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -25,3 +25,26 @@
   text-decoration: none;
   color: white;
 }
+
+.btn {
+  border-radius: 25px;
+  border: 1px #6b6b6b solid;
+  background-color: white;
+  color: #6b6b6b;
+  &:hover {
+    border-color: #6b6b6b;
+    color: #6b6b6b;
+    background-color: #f2f2f2;
+  }
+}
+
+.btn-transparent {
+  background-color: rgba(0,0,0,0);
+  border: 1px white solid;
+  color: white;
+  &:hover {
+    background-color: rgba(0,0,0,0.3);
+    border: 1px white solid;
+    color: white;
+  }
+}
