--- a/app/assets/stylesheets/layout/_navbar.scss
+++ b/app/assets/stylesheets/layout/_navbar.scss
@@ -52,9 +52,10 @@
 .navbar-wagon-link {
   color: #616668;
   font-size: 14px;
+  width: 100px;
 }
 .navbar-wagon-link:hover {
-  color: #da552f;
+  color: black;
   text-decoration: none;
 }
 
@@ -64,15 +65,14 @@
   padding: 0 20px;
   border-radius: 20em;
   line-height: 40px;
-  background-color: #D23333;
+  background-color: rgba(0,0,0,0.8);
   color: white;
   font-size: 14px;
-  border: 2px solid #D23333;
+  border: 1px solid black;
 }
 .navbar-wagon-button:hover {
   color: white;
-  background: #D23333;
-  border-color: #ac2626;
+  background: rgba(0,0,0,1);
 }
 
 /* Navbar search form */
