--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,4 +4,6 @@
  * ------------------------------------- */
 body {
   margin-bottom: 30px;
+  font-family: 'Source Sans Pro', sans-serif;
+  font-size: 20px;
 }
