Partial work ont he stars animation

--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,4 +5,5 @@
 @import "media";
 @import "button";
 @import "place-photo-wrapper";
-@import "space-map"
+@import "space-map";
+@import "stars-animation";
