--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,13 +1,16 @@
-<div class="place-photo-wrapper home-hero" style= "background-image: url('<%= image_path "space-hero.jpg", width: 1500, height: 400, crop: :fill %>')">
- <div class="banner-content">
-  <h1>Rent a place in a galaxy near you</h1>
-  <%= link_to "Discover", "#", class: "btn btn-primary btn-lg" %>
+<div class="hero-animation">
+  <div id="particles-js">
+  </div>
+   <div class="banner-content">
+    <h1>Rent a place in a galaxy near you</h1>
+    <%= link_to "Discover", "#", class: "btn btn-primary btn-lg" %>
   </div>
 </div>
 
+
 <div class="wrapper">
   <div class="container">
-  <h1>Places near you</h1>
+    <h1>Places near you</h1>
     <div class="row", id="place-list">
       <% @places.each do |place| %>
       <div class="col-xs-12 col-sm-4 col-md-3">
@@ -26,9 +29,8 @@
       </div>
       <% end %>
     </div>
+    <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
   </div>
-  <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
 </div>
-
 
 
