Finish particles animation

--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,6 +1,6 @@
-<div class="hero-animation">
   <div id="particles-js">
   </div>
+<div class="hero-content">
    <div class="banner-content">
     <h1>Rent a place in a galaxy near you</h1>
     <%= link_to "Discover", "#", class: "btn btn-primary btn-lg" %>
