--- a/app/assets/stylesheets/components/_place-photo-wrapper.scss
+++ b/app/assets/stylesheets/components/_place-photo-wrapper.scss
@@ -9,9 +9,16 @@
   justify-content: center;
 }
 
-.home-hero {
+.hero-content {
   height: calc(100vh - 70px);
+  width: 100%;
   margin-bottom: 30px;
+  position: absolute;
+  top: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  text-align: center;
   .btn {
     border-radius: 50px;
     margin-top: 15px;
@@ -23,6 +30,12 @@
     }
   }
 }
+
+.banner-content {
+  top: 0;
+  color: white;
+}
+
 
 .banner h1 {
   font-size: 50px;
