--- a/app/assets/stylesheets/components/_place-photo-wrapper.scss
+++ b/app/assets/stylesheets/components/_place-photo-wrapper.scss
@@ -9,7 +9,7 @@
   justify-content: center;
 }
 
-.hero-content {
+.hero-wrapper {
   height: calc(100vh - 70px);
   width: 100%;
   margin-bottom: 30px;
@@ -28,6 +28,15 @@
     &:hover {
       background-color: rgba(0,0,0,0.3);
     }
+  }
+  input {
+    height: 50px;
+    box-shadow: 0px 3px 20px 0px rgba(0,0,0,0.2);
+    font-size: 20px;
+    font-weight: bolder;
+  }
+  .form-group, .form-control {
+    width: 100%;
   }
 }
 
