--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -1,9 +1,21 @@
-  <div id="particles-js">
-  </div>
-<div class="hero-content">
-   <div class="banner-content">
-    <h1>Rent a place in a galaxy near you</h1>
-    <%= link_to "Discover", "#", class: "btn btn-primary btn-lg" %>
+<div id="particles-js">
+</div>
+<div class="hero-wrapper">
+  <div class="container">
+    <div class="banner-content">
+      <h1>Rent a place in a galaxy near you</h1>
+      <div class="row">
+      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+        <form class="form-inline">
+          <div class="form-group">
+          <label class="sr-only" for="search">Search</label>
+          <input type="text" class="form-control" id="search" placeholder="Find your dream destination">
+          </div>
+          <button type="submit" class="btn btn-default btn-lg hidden">Search</button>
+        </form>
+      </div>
+      </div>
+    </div>
   </div>
 </div>
 
@@ -28,7 +40,6 @@
         </div>
       </div>
       <% end %>
-    </div>
     <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
   </div>
 </div>
