Add card info and update search bar

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -21,10 +21,20 @@
 }
 .card-description {
   position: absolute;
-  bottom: 10px;
+  bottom: 0px;
   left: 10px;
   color: white;
+  text-align: left;
 }
+
+.card-description h2 {
+  font-size: 24px;
+}
+
+.card-description p {
+  font-size: 13px;
+}
+
 .card-link {
   position: absolute;
   top: 0;
@@ -37,4 +47,10 @@
 }
 .card-link:hover{
   opacity: 0.1;
+}
+
+.card-user {
+  position: absolute;
+  right: 10px;
+  top: 10px;
 }
