--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -2,18 +2,20 @@
 </div>
 <div class="hero-wrapper">
   <div class="container">
-    <div class="banner-content">
-      <h1>Rent a place in a galaxy near you</h1>
-      <div class="row">
-      <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-        <form class="form-inline">
-          <div class="form-group">
-          <label class="sr-only" for="search">Search</label>
-          <input type="text" class="form-control" id="search" placeholder="Find your dream destination">
-          </div>
-          <button type="submit" class="btn btn-default btn-lg hidden">Search</button>
-        </form>
-      </div>
+    <div class="hero-content">
+      <div class="banner-content">
+        <h1>Rent a place in a galaxy near you</h1>
+        <div class="row">
+        <div class="col-xs-12 col-sm-6 col-sm-offset-3">
+          <form class="form-inline">
+            <div class="form-group">
+            <label class="sr-only" for="search">Search</label>
+            <input type="text" class="form-control" id="search" placeholder="Find your dream destination">
+            </div>
+            <button type="submit" class="btn btn-default btn-lg"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
+        </div>
       </div>
     </div>
   </div>
@@ -26,7 +28,8 @@
     <div class="row", id="place-list">
       <% @places.each do |place| %>
       <div class="col-xs-12 col-sm-4 col-md-3">
-        <div class="card text-center">
+        <div class="card">
+        <div class="card-category">By <%= place.user.first_name %></div>
 
 
           <div class="card-header" style="background-image: url('<%= cl_image_path place.photo, height: 300, width: 400, crop: :fill %>')">
@@ -34,8 +37,11 @@
 
 
           <div class="card-description">
-            <h3><%= place.name %></h3>
+            <h2><%= place.name %></h2>
+            <p>€<%= place.price %></p>
           </div>
+          <% avatar_url = place.user.facebook_picture_url || place.user.photo %>
+          <%= cl_image_tag avatar_url, class: "card-user avatar" %>
           <%= link_to "", place_path(place), class: "card-link" %>
         </div>
       </div>
