--- a/app/views/places/index.html.erb
+++ b/app/views/places/index.html.erb
@@ -7,10 +7,10 @@
         <h1>Rent a place in a galaxy near you</h1>
         <div class="row">
         <div class="col-xs-12 col-sm-6 col-sm-offset-3">
-          <form class="form-inline">
+          <form class="form-inline" action="/places/search">
             <div class="form-group">
             <label class="sr-only" for="search">Search</label>
-            <input type="text" class="form-control" id="search" placeholder="Find your dream destination">
+            <input type="text" class="form-control" id="search" name="query" placeholder="Find your dream destination">
             </div>
             <button type="submit" class="btn btn-default btn-lg"><i class="fa fa-search"></i></button>
           </form>
@@ -26,27 +26,9 @@
   <div class="container">
     <h1>Places near you</h1>
     <div class="row", id="place-list">
-      <% @places.each do |place| %>
-      <div class="col-xs-12 col-sm-4 col-md-3">
-        <div class="card">
-        <div class="card-category">By <%= place.user.first_name %></div>
-
-
-          <div class="card-header" style="background-image: url('<%= cl_image_path place.photo, height: 300, width: 400, crop: :fill %>')">
-          </div>
-
-
-          <div class="card-description">
-            <h2><%= place.name %></h2>
-            <p>€<%= place.price %></p>
-          </div>
-          <% avatar_url = place.user.facebook_picture_url || place.user.photo %>
-          <%= cl_image_tag avatar_url, class: "card-user avatar" %>
-          <%= link_to "", place_path(place), class: "card-link" %>
-        </div>
-      </div>
-      <% end %>
+      <%= render "list" %>
     <%= link_to 'Add new place', new_place_path(@place), class: "btn btn-success btn-lg" %>
+    </div>
   </div>
 </div>
 
