--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -44,6 +44,7 @@
     <div class="col-xs-12 col-sm-4">
       <h2>Add your review</h2>
       <%= simple_form_for([@place, @review]) do |f| %>
+      <%= f.error_notification %>
       <%= f.input :content, as: :text, input_html: {rows: 5, cols: 10} %>
       <%= f.submit  %>
       <% end %>
