--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -2,6 +2,7 @@
 <div class="row">
 <div class="col-sm-offset-4 col-sm-4">
 <%= simple_form_for(@place) do |f| %>
+<%= f.error_notification %>
  <%= f.input :name %>
  <%= f.input :description %>
  <%= f.input :address %>
