change nav tabs backgroun clr

--- a/app/assets/stylesheets/pages/_user.scss
+++ b/app/assets/stylesheets/pages/_user.scss
@@ -19,7 +19,7 @@
   margin-top: 30px;
   .nav-tabs {
     border-bottom: none;
-    background-color: #F3F3F3;
+    background-color: #fafafa;
     border: none;
     a {
       color: black;
