--- a/app/assets/stylesheets/pages/_user.scss
+++ b/app/assets/stylesheets/pages/_user.scss
@@ -19,7 +19,7 @@
   margin-top: 30px;
   .nav-tabs {
     border-bottom: none;
-    background-color: #fafafa;
+    background-color: transparent;
     border: none;
     a {
       color: black;
@@ -77,6 +77,13 @@
     background-color: #EE5F5B;
     color: white;
     border: none;
+  }
+
+  .fa-check {
+    color: #32B796;
+  }
+  .fa-times {
+    color: #EE5F5B;
   }
 
 }
