--- a/app/views/places/_form.html.erb
+++ b/app/views/places/_form.html.erb
@@ -3,22 +3,40 @@
 <div class="col-sm-offset-4 col-sm-4">
 <%= simple_form_for(@place) do |f| %>
 <%= f.error_notification %>
- <%= f.input :name %>
- <%= f.input :description %>
- <%= f.input :address %>
- <p>Features</p>
- <div class="feature-items">
+  <%= f.input :name %>
+  <%= f.input :description %>
+  <%= f.input :address %>
+  <label>Features</label>
+  <div class="feature-items">
   <div class="row">
     <div class="col-sm-6">
-     <%= f.input :UV, label: 'UV', as: :boolean, boolean_style: :inline %>
-     <%= f.input :startlight, label: 'Startlight', as: :boolean, boolean_style: :inline %>
-     <%= f.input :satellite, label: 'Satellite',as: :boolean, boolean_style: :inline %>
-     <%= f.input :wifi, label: 'Wifi', as: :boolean, boolean_style: :inline %>
-     <%= f.input :earth_mailing, label: 'Earth mailing', as: :boolean, boolean_style: :inline %>
-     <%= f.input :astronaut_outfit, label: 'Astronaut outfit', as: :boolean, boolean_style: :inline %>
-     <%= f.input :crater, label: 'Crater', as: :boolean, boolean_style: :inline %>
-     <%= f.input :alien, label: 'Alien', as: :boolean, boolean_style: :inline %>
-     <%= f.input :freezing, label: 'Freezing', as: :boolean, boolean_style: :inline %>
+      <%= f.input :UV, label: 'UV', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :startlight, label: 'Startlight', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :satellite, label: 'Satellite',as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :wifi, label: 'Wifi', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :earth_mailing, label: 'Earth mailing', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :astronaut_outfit, label: 'Astronaut outfit', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :crater, label: 'Crater', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :alien, label: 'Alien', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
+      <%= f.input :freezing, label: 'Freezing', as: :boolean, boolean_style: :inline %>
+    </div>
+    <div class="col-sm-6">
      <%= f.input :detox, label: 'Detox', as: :boolean, boolean_style: :inline %>
     </div>
   </div>
