--- a/app/views/places/show.html.erb
+++ b/app/views/places/show.html.erb
@@ -1,6 +1,14 @@
- <div class="place-photo-wrapper" style= "background-image: url('<%= cl_image_path @place.photo, width: 1500, height: 400, crop: :fill %>')">
+ <div class="place-photo-wrapper" style= "background-image:linear-gradient(-225deg, rgba(0,101,168,0.6) 0%, rgba(0,36,61,0.6) 50%), url('<%= cl_image_path @place.photo, width: 1500, height: 400, crop: :fill %>')">
    <div class="banner-content">
     <h1><%= @place.name %></h1>
+      <p>
+        <% @place.rating.times do %>
+        <i class="fa fa-star active-star"></i>
+        <% end %>
+        <% (5 - @place.rating).times do %>
+        <i class="fa fa-star inactive-star"></i>
+        <% end %>
+      </p>
     <div>
       <% if user_signed_in? %>
       <%= link_to "Book", place_reservations_path(@place), method: :post, class: "btn btn-transparent btn-lg" %>
